--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/onlinereadbook/catchfly#readme",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "cheerio": "^1.0.0-rc.2",
     "chromedriver": "^2.31.0",
     "mz": "^2.6.0",
+    "node-command-line": "^1.0.2",
     "request": "^2.81.0",
     "selenium-webdriver": "^3.5.0"
   }
